# pygame-ios

./: .gitignore  README.md  pyproject.toml
src/pygame_ios/: __init__.py  __main__.py
src/pygame_ios/examples/: README.md  pymunk.py  rpg.py
src/pygame_ios/examples/assets/: Untitled.json  map.json
