[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pygame-ios"
authors = [{name = "Luke Lazzaro", email = "lazzdev@proton.me"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.13"
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/seekerluke/pygame-ios"
Issues = "https://github.com/seekerluke/pygame-ios/issues"

[project.scripts]
pygame_ios = "pygame_ios.__main__:cli"
